--- a/style.css
+++ b/style.css
@@ -36,10 +36,16 @@ a:hover {
 
 }
 body {
+  
   background-color: #ada68d;
   background-color: #F8F1FF;
+  background-color: rgb(249, 244, 238);
+  background-color: #ebe0d4;
 
-  font-family: 'Muli', sans-serif;
+
+  /* background-color: rgb(238, 232, 224); */
+
+  font-family: 'Karla', sans-serif;
   margin: 0;
  
  
@@ -53,19 +59,32 @@ h1 {
   color: #1B998B;
   
 }
-
+.navBar{
+  background-color: #1B998B;
+  color: #ebe0d4;
+}
 .home{
   padding-bottom: 100px;
  padding-left: 130px;
   background-color: #DECDF5;
+  background-color: rgb(249, 244, 238);
+  background-color: rgb(238, 232, 224);
+background-color: #ebe0d4;
+background-color: #C54F31;
+  
 
 color: #534D56;
+color: rgb(249, 244, 238);
+color: #ebe0d4;
 height: 100vh;
 
 }
 .home h1{
   font-size: 5.5rem;
   margin-bottom: 30px;
+  color: rgb(249, 244, 238);
+  color: #ebe0d4;
+
 }
 .nav{
   width: 100%;
@@ -78,13 +97,13 @@ height: 100vh;
 .logo{
   margin-top: 20px;
   margin-bottom: 10px;
-
+  overflow: hidden;
   justify-content: center;
   align-items: center;
 }
 .nav a{
 margin-right: 25px;
-color: #1B998B;
+color: #ebe0d4;
 font-weight: 700;
 
 }
@@ -101,14 +120,31 @@ section{
 }
 .about{
   background-color: #F8F1FF;
+  background-color: rgb(238, 232, 224);
+  background-color: rgb(249, 244, 238);
+  background-color:   #ebe0d4;
+   
+
   height: 800px;
 }
 .about h1{
   font-size: 5rem;
 
 }
+.projects{
+  background-color: #ebe0d4;
+  background-color: #1B998B;
+  /* color: black; */
+}
+.projects h1{
+  color: #ebe0d4;
+}
+.projects h2{
+  font-weight: 700;
+  margin-left: 3rem;
+}
 p{
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 .title{
   margin-left: 100px;
@@ -116,22 +152,33 @@ p{
 }
 .badge{
   
-    background-color: #1B998B;
+    background-color: #ebe0d4;
+    color: #084b43;
+    /* color: #ebe0d4; */
     height: 35px;
     /* width: 104px; */
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
+    font-weight: 700;
     margin-right: 10px;
     border-radius: 20px;
     
+}
+.area{
+  background-color: #C54F31;
+  color: #ebe0d4;
 }
 .cardM{
   
   margin-left: 100px;
   margin-right: 100px;
   
+}
+.cardM p{
+  font-weight: 600;
+
 }
 .cardM h1{
   /* font-family: 'Karla', sans-serif;
@@ -234,14 +281,14 @@ margin-bottom: 20px;
 .travelT{
   font-weight: lighter;
   position: relative;
-  top:-310px;
+  top: -350px;
   left: 260px;
 }
 .photoAbout{
   background-image: url("public/images/blob.png");
   /* width: 50vw; */
- background-repeat:no-repeat ;
- background-size: contain;
+  background-repeat:no-repeat ;
+  background-size: contain;
 }
 .show{
   opacity: 0;
@@ -349,6 +396,7 @@ margin-bottom: 20px;
 
 .button :nth-child(1){
   background-color: #c4ace4;
+  background-color: #C54F31;
   color: rgb(255, 255, 255);
   z-index: 100;
   transform: translate3d(-8px, -8px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
@@ -372,4 +420,50 @@ margin-bottom: 20px;
 }
 .icon{
   width: 40px;
+}
+.abt{
+  font-size: 20px;
+}
+.mouse{
+  width: 30%;
+  position: absolute;
+  left: 50vw;
+  top: 200px;
+  
+}
+.child{
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  scroll-snap-align: start;
+}
+body{
+  margin: 0;
+  transition: 0.6s all;
+
+}
+.proj-desc{
+  background-color: #C54F31;
+  color: #ebe0d4;
+}
+.proj-desc p{
+  font-size: 1.3rem;
+  padding: 3rem;
+
+}
+.proj-desc h1{
+color: #ebe0d4;
+
+}
+.project-body{
+  background-color:#1B998B;
+
+  color: #ebe0d4;
+}
+.project-body h2{
+  font-weight: 700;
+  font-size: 3.2rem;
 }
